fixed some overflow issues

--- a/less/defaults.less
+++ b/less/defaults.less
@@ -82,7 +82,7 @@
 
 img::selection { background: transparent; }
 img::-moz-selection { background: transparent; }
-body { -webkit-tap-highlight-color: @selectcolor; overflow: scroll !important; -webkit-overflow-scrolling: touch !important; }
+body { -webkit-tap-highlight-color: @selectcolor; }
 
 /* ngCloak */
 
