--- a/less/styles.less
+++ b/less/styles.less
@@ -6,6 +6,12 @@
 
 /* styles */
 
+html,
+body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 .dark, .medium, .light {
 	width: 100%;
 	padding: 70px 0;
